@startuml

title __GalaxyBank Repository's Class Diagram__\n

  database postgresql {

  }

  skinparam databaseBackgroundColor CornflowerBlue


  namespace com.galaxybank.repository {
      interface com.galaxybank.repository.CardRepository extends CrudRepository {
      }
      interface com.galaxybank.repository.AtmRepository extends CrudRepository{
      }
      interface com.galaxybank.repository.AdminRepository extends CrudRepository {
                {abstract} + findByEmailAndPassword()
      }
      interface com.galaxybank.repository.AccountRepository extends CrudRepository {
      }
  }

  com.galaxybank.repository.CardRepository --> postgresql
  com.galaxybank.repository.AtmRepository --> postgresql
  com.galaxybank.repository.AdminRepository --> postgresql
  com.galaxybank.repository.AccountRepository --> postgresql


@enduml
